@@ -1,7 +1,8 @@
 $Id$
 
 User-visible changes in version 0.9.4  (2010-  -  ):
-* removed syntax delete[range], used delete(condition) instead
+* removed syntax `delete[range]', use `delete(condition)' instead
+* syntax `y[x=15]' replaced with `y[index(15)]'
 
 User-visible changes in version 0.9.3  (2010-06-24):
 * changed implementation of gamma and related functions (using boost.math now)
